--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>About Me</title>
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
   <header class="masthead">
       <p class="masthead-intro">Hi, I'm</p>
-      <h1 class="masthead-heading ">Gabe!<h/1>
+      <h1 class="masthead-heading ">Gabe!</h1>
   </header>
   <section class="introduction-section content">
       <h1>Introduction</h1>
